@@ -1,3 +1,6 @@
+2023-02-11
+-	Refine sampling to fix #410
+
 2023-02-04
 -	Fix FreeBSD include bug. #407
 -	Add geo info in JSON output when using GeoDB.  #402
